# Streaming_CVG

./: README.md
LinuxFolder/Single Pipeline/: Makefile  Single_Pipeline_Test  old.cpp
LinuxFolder/Testing Dual GStreamerPipeline/: main.cpp
LinuxFolder/Two Pipelines Image Processing/: Makefile  homography_matrix.yaml  main.cpp  old.cpp
RPI_Folder/: TCPSinglePipeline.sh  TCPSinglePipelineReciever.sh  TCPSinglePipelineSender.sh  UDPDualPipeline.sh  UDPSinglePipelineRecieve.sh  UDPSinglePipelineTransmit.sh  UDPSingleTransRec.sh  dualpipeline.sh  singlepipeline.sh
RPI_Folder/Mock CVG Program/: CMakeLists.txt  singleCam.cpp
RPI_Folder/Mock CVG Program/include/: yen_threshold.h
Single Pipeline/: main.cpp
Testing Dual GStreamerPipeline/: Makefile  Test_Dual_GStreamer_Pipelines
Two Pipelines Image Processing/: GStreamerTest_LINUX_LAPTOP_IMAGE_PROCESSED  multithreadAttempt.cpp  yen_thresholding.cpp
